2020-11-05  Alex Christensen  <achristensen@webkit.org>

        Add null checks effectively in UserInputBridge
        https://bugs.webkit.org/show_bug.cgi?id=218622
        <rdar://problem/70724960>

        Reviewed by Wenson Hsieh.

        * WebProcess/WebPage/WebPage.cpp:
        (WebKit::WebPage::stopLoadingFrame):
        (WebKit::WebPage::stopLoading):
        (WebKit::WebPage::reload):

2020-11-05  Brent Fulgham  <bfulgham@apple.com>

        [macOS] Remove mdnsresponder access from WebKit processes
        https://bugs.webkit.org/show_bug.cgi?id=218633
        <rdar://problem/69133548>

        Reviewed by Per Arne Vollan.

        Now that all network loading (including media) happens in the Network process,
        we can remove an old permission to open outbound connections to mdnsresponder.
        This is also unneeded in the GPU process, for the same reason.

        I noticed that the new WebAuthn process sandbox mistakenly included this,
        and removed it there, too.

        * GPUProcess/mac/com.apple.WebKit.GPUProcess.sb.in:
        * WebAuthnProcess/mac/com.apple.WebKit.WebAuthnProcess.sb.in:
        * WebProcess/com.apple.WebProcess.sb.in:

2020-11-05  John Wilander  <wilander@apple.com>

        PCM: Switch to JSON report format
        https://bugs.webkit.org/show_bug.cgi?id=218634
        <rdar://problem/70469923>

        Reviewed by Brent Fulgham.

        The standards conversation has landed in attribution reports in a JSON
        format as opposed to the currently implemented URL format. Discussion
        here: https://github.com/privacycg/private-click-measurement/issues/30

        * NetworkProcess/AdClickAttributionManager.cpp:
        (WebKit::AdClickAttributionManager::fireConversionRequest):

2020-11-05  Brian Burg  <bburg@apple.com>

        [Cocoa] Inspector Extensions: Add _WKInspectorExtension and related plumbing
        https://bugs.webkit.org/show_bug.cgi?id=217783
        <rdar://problem/69968787>
